# cppbs

./: README.org  add_app  bootstrap_project  project_settings
template/: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  CMakeLists.txt  README.org  conanfile.txt
template/cmake/: setup_protobuf_compilation.cmake  setup_target.cmake
template/conan/: clang_debug  clang_release  gcc_debug  gcc_release
template/cppbs/: CMakeLists_app_template.cmake  CMakeLists_lib_template.cmake  add_lib
template/data/: CMakeDeps.cmake  CMakeLists.txt  copy_files.sh
template/docker/: Dockerfile  build_docker
template/podman/: Dockerfile  build_container
template/tools/: build  clangd  docker_shell  execute_in_docker  execute_in_podman  get_includes.sh  podman_shell  refresh_conan  run  rund  setup_builds
